# ATLAS

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  llms.txt  pyproject.toml
docs/: INDEX.md  continuous_ssfr.md  deprecated.md  kitchen.md  ssfr_kitchen_integration.md
docs/01-foundation/: index.md
docs/02-annotation/: index.md
docs/03-perception/: index.md
docs/04-data-ecosystem/: index.md
docs/05-integration/: index.md
docs/_machine/: bugs.yaml  status.yaml  tech-debt.yaml
docs/adr/: 0000-template.md  0001-flat-structure.md  0002-research-architecture.md  README.md
docs/architecture/: ATLAS_CORE.md  ROADMAP_v1.0.md  constitution.md  positioning.md  top-level-design.md
docs/changelog/: CHANGELOG.md
docs/operations/: cheatsheet.md  testing.md
docs/research/: SSFR_SCIENCE_QUESTIONS.md  ssfr_continuous_hierarchical.md  ssfr_information_geometry.md
docs/subsystems/: 01-core.md  01-vlm.md  02-ssfr.md  02-world-model.md  03-discrete-spaces.md  03-vla.md  04-architecture-patterns.md  04-continuous-spaces.md  05-environment.md  06-learning.md  07-research.md  11-schema-design.md  12-action-annotation.md  13-scene-annotation.md  23-slam.md  (+17 more)
experiments/: __init__.py  demo_composition.py  demo_physical_kitchen.py  demo_ssfr_kitchen.py  demo_temporal.py  demo_visualization.py  meta_ssfr_atlas.py  meta_ssfr_enhanced.py  test_astar_limits.py  test_continuous_ssfr.py  test_extreme_stress.py  test_first_update.py  test_physical_kitchen.py  test_pool_pressure.py  test_realistic_stress.py  test_reuse_rate.py  test_sandbox.py  test_spike_analysis.py  test_ssfr_kitchen.py  test_structure_reuse.py  test_structure_reuse_v2.py  test_ultra_complex_benchmark.py
references/: datasets.md  papers.md  tools.md
scripts/: README.md  check_doc_anchors.py  check_doc_consistency.py  check_known_gaps.py  fix_encoding.py  fix_subsystem_links.py  generate_reports.py  migrate_to_subsystems.py
src/: __init__.py
tests/: __init__.py  test_core.py  test_spaces.py
(+111 files in other folders)
